# qsirecon

./: .codespellrc  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  AGENTS.md  CHANGES.rst  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile.base  LICENSE  MANIFEST.in  README.rst  REFERENCES.md  long_description.rst  pyproject.toml  tox.ini
.circleci/: 3TissueAutotrackTest.sh  3TissueReconTests.sh  AMICOReconTests.sh  AllFieldmaps.sh  AutoTrackTest.sh  CUDATest.sh  DIPYReconTests.sh  DRBUDDI_SHORELine_epi.sh  DRBUDDI_TENSORLine_epi.sh  DRBUDDI_eddy_rpe_series.sh  DSCSDSI.sh  DSCSDSI_outputs.txt  DSDTI_TOPUP.sh  DSDTI_nofmap.sh  DSDTI_nofmap_outputs.txt  DSDTI_outputs.txt  DSDTI_synfmap.sh  DSDTI_synsdc_outputs.txt  FreeSurferIngressTest.sh  HBCD_preproc.sh  IngressReconTests.sh  IntramodalTemplate.sh  IntramodalTemplate_outputs.txt  Mrtrix3ReconTests.sh  MultiT1w.sh  MultishellScalarfestTests.sh  PyAFQReconExternalTrk.sh  PyAFQReconTests.sh  ReconTests.sh  ScalarMapper.sh  TortoiseRecon.sh  config.yml  continue_config.yml  data_versions.txt  get_data.py  get_data.sh  test_5tt_hsv.json
.circleci/pytests/: test_drbuddi.py
.cursor/rules/: pennlinc-shared.mdc  qsirecon.mdc
.github/: config.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: lint.yml  pixi-lock.yml
.maint/: INSTRUCTIONS.md
docker/scripts/: get_templates.sh
docs/: Makefile  api.rst  api_reference.rst  building_pipelines.rst  building_workflows.rst  builtin_pipelines.rst  builtin_workflows.rst  changes.md  citing.rst  comparisons.md  conf.py  connectivity_matrices.rst  contributors.rst  environment.yaml  getting_started.rst  help.rst  index.rst  input_data.rst  installation.rst  license.rst  links.rst  models.rst  outputs.rst  preprocessing.rst  quickstart.rst  reconstruction copy.rst  reconstruction.rst  requirements.txt  update_scalardefs.py  usage.rst
docs/_static/: theme_overrides.css
docs/anat/: base.rst
docs/models/: dki.rst  dti.rst  gqi.rst  mapmri.rst  noddi.rst  pyafq.rst
docs/nonscalars/: README  amico_noddi.csv  csdsi_3dshore.csv  dipy_dki.csv  dsi_studio_autotrack.csv  dsi_studio_gqi.csv  dsistudio_autotrack.csv  dsistudio_gqi.csv  mrtrix_anat.csv  mrtrix_dwi.csv  ss3t_autotrack.csv  ss3t_fod_autotrack.csv  tortoise.csv
docs/recon_scalars/: README  amico_noddi.csv  csdsi_3dshore.csv  dipy_3dshore.csv  dipy_dki.csv  dipy_mapmri.csv  dsi_studio_gqi.csv  hbcd_scalar_maps.csv  tortoise.csv
docs/sphinxext/: github_link.py  qsirecon_apidoc.py
qsiprep/cli/: group_report.py  parser.py  version.py
qsiprep/data/pipelines/: TORTOISE.json  amico_noddi.json  dipy_dki.json  dipy_mapmri.json  hbcd_scalar_maps.json  mrtrix_singleshell_ss3t_ACT-hsvs.json  ss3t_autotrack.json  test_scalar_maps.json
qsiprep/interfaces/: anatomical.py  dsi_studio.py  fmap.py  scalar_mapping.py
qsiprep/tests/: run_local_tests.py  test_cli.py
qsiprep/tests/data/: dipy_dki_outputs.txt  drbuddi_shoreline_epi_outputs.txt  dscsdsi_outputs.txt  mrtrix3_recon_outputs.txt  scalar_mapper_outputs.txt
qsiprep/utils/: atlases.py  bids.py  grouping.py
qsiprep/workflows/anatomical/: surface.py
qsiprep/workflows/dwi/: base.py  confounds.py  hmc.py  intramodal_template.py  resampling.py
qsiprep/workflows/fieldmap/: base.py
qsiprep/workflows/recon/: amico.py  converters.py  dipy.py  pyafq.py  tortoise.py  utils.py
qsirecon/: __init__.py  config.py
qsirecon/cli/: convertODFs.py  group_report.py  parser.py  recon_plot.py  run.py  version.py  workflow.py
qsirecon/data/: NOTICE  __init__.py  boilerplate.bib  io_spec.json  io_spec.yaml  models.bib  parker.bib  recon_scalar_bids_config.json  reports-spec-anat.yml  reports-spec-dwi.yml  reports-spec.yml  tien.bib
qsirecon/data/nonscalars/: amico_noddi.yaml  csdsi_3dshore.yaml  dipy_dki.yaml  dipy_mapmri.yaml  dsistudio_autotrack.yaml  dsistudio_gqi.yaml  mrtrix_anat.yaml  mrtrix_dwi.yaml  reorient_fslstd.yaml  ss3t_autotrack.yaml  ss3t_fod_autotrack.yaml  tortoise.yaml
qsirecon/data/pipelines/: TORTOISE.yaml  abcd_recon.yaml  amico_noddi.yaml  csdsi_3dshore.json  csdsi_3dshore.yaml  csdsi_3dshore_apply.yaml  csdsi_3dshore_estimate.yaml  dipy_3dshore.json  dipy_3dshore.yaml  dipy_dki.yaml  dipy_mapmri.yaml  dsi_studio_autotrack.json  dsi_studio_autotrack.yaml  dsi_studio_gqi.json  dsi_studio_gqi.yaml  hbcd_scalar_maps.yaml  ingress_scalars_for_bundles.yaml  mrtrix_multishell_msmt_ACT-fast.json  mrtrix_multishell_msmt_ACT-fast.yaml  mrtrix_multishell_msmt_ACT-hsvs.json  mrtrix_multishell_msmt_ACT-hsvs.yaml  mrtrix_multishell_msmt_noACT.json  mrtrix_multishell_msmt_noACT.yaml  mrtrix_multishell_msmt_noACT_apply.yaml  mrtrix_multishell_msmt_noACT_estimate.yaml  mrtrix_multishell_msmt_pyafq_tractometry.json  mrtrix_multishell_msmt_pyafq_tractometry.yaml  mrtrix_singleshell_ss3t_ACT-fast.json  mrtrix_singleshell_ss3t_ACT-fast.yaml  (+13 more)
qsirecon/interfaces/: __init__.py  amico.py  anatomical.py  ants.py  bids.py  converters.py  denoise.py  dipy.py  dsi_studio.py  eddy.py  freesurfer.py  gradients.py  images.py  ingress.py  interchange.py  itk.py  mrtrix.py  pyafq.py  qc.py  recon_scalars.py  reports.py  scalar_mapping.py  tortoise.py  utils.py
qsirecon/reports/: core.py
qsirecon/tests/: integration_test_data.py  run_local_tests.py  test_cli.py  test_interfaces.py  test_utils.py  utils.py
qsirecon/utils/: __init__.py  atlases.py  bids.py  boilerplate.py  brainsuite_shore.py  ingress.py  maths.pyx  misc.py  sentry.py  shm.py  sloppy_recon.py  testing.py
qsirecon/viz/: __init__.py  config.json  recon_config.json  report.tpl  reports.py  utils.py
qsirecon/workflows/: __init__.py  base.py  reports.py
scripts/: fetch_templates.py  set_up_amico.py
tests/: data_tests.py  get_data.py  grouping_tests.py  opts_tests.py  smoke_tests.py  test_lesion.py
wrapper/: LICENSE  pyproject.toml
wrapper/qsiprep_container/: qsiprep_docker.py  qsiprep_singularity.py
wrapper/qsirecon_container/: qsiprep_docker.py  qsiprep_singularity.py
(+88 files in other folders)
