[build-system]
requires = ["hatchling", "hatch-vcs", "nipreps-versions", "cython", "numpy"]
build-backend = "hatchling.build"

[project]
name = "qsirecon"
description = "qsirecon builds workflows for reconstructing q-space images"
readme = "long_description.rst"
authors = [{name = "The PennLINC developers"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "numpy <= 1.26.3",
    'importlib_resources; python_version < "3.11"',
    "dipy>=1.10.0,<1.11.0",
    "dmri-amico == 2.0.3",
    "filelock",
    "fury",
    "indexed_gzip <= 1.8.7",
    "Ingress2QSIRecon == 0.2.3",
    "jinja2 < 3.1",
    "matplotlib",
    "networkx ~= 2.8.8",
    "nibabel <= 6.0.0",
    "nilearn == 0.10.1",
    "nipype == 1.9.1",
    "nireports >= 24.0.3",
    "niworkflows >= 1.13,< 1.14",
    "packaging",  # for version string parsing
    "pandas < 2.0.0",
    "psutil <= 5.9.8",
    "pyAFQ == 2.0",
    "pybids",
    "pyyaml",
    "scikit-image",
    "scikit-learn <= 1.4.0",
    "seaborn",
    "sentry_sdk",
    "SimpleITK",
    "svgutils <= 0.3.4",
    "transforms3d",
    "vtk",
    "xvfbwrapper",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pennlinc/qsirecon"
Documentation = "https://www.qsirecon.readthedocs.io"
Paper = "https://doi.org/10.1038/s41592-022-01458-7"
"Docker Images" = "https://hub.docker.com/r/pennlinc/qsirecon/tags/"

[project.optional-dependencies]
doc = [
    "doctest-ignore-unicode",
    "lxml_html_clean",
    "nbsphinx",
    "pydot >= 1.2.3",
    "pydotplus",
    "recommonmark",
    "sphinx >= 4.2.0",
    "sphinx-argparse",
    "sphinx-markdown-tables",
    "sphinx_rtd_theme",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-bibtex",
    "sphinx_design",
]
dev = [
    "ruff ~= 0.15.0",
    "pre-commit",
]
tests = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-env",
]
maint = [
    "fuzzywuzzy",
    "python-Levenshtein",
]

# Aliases
all = ["qsirecon[dev,doc,maint,tests]"]

[project.scripts]
qsirecon = "qsirecon.cli.run:main"
mif2fib = "qsirecon.cli.convertODFs:mif_to_fib"
fib2mif = "qsirecon.cli.convertODFs:fib_to_mif"
qsirecon_group_report = "qsirecon.cli.group_report:aggregate_reports"
recon_plot = "qsirecon.cli.recon_plot:recon_plot"

#
# Hatch configurations
#

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]  # No longer needed in sdist

[tool.hatch.build.targets.wheel]
packages = ["qsirecon"]
exclude = [
    "qsirecon/tests/data",  # Large test data directory
]

##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
source = "vcs"
# raw-options = { version_scheme = "nipreps-calver" }

[tool.hatch.build.hooks.vcs]
version-file = "qsirecon/_version.py"

#
# Developer tool configurations
#

# Disable black
[tool.black]
exclude = ".*"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "YTT",
  "S",
  "BLE",
  "B",
  "A",
  # "CPY",
  "C4",
  "DTZ",
  "T10",
  # "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "PT",
  "Q",
]
ignore = [
  "S110",  # `try`-`except`-`pass` detected
  "B904",  # Within an `except` clause, raise exceptions
  "BLE001",  # Do not catch blind exceptions
  "B017",  # Do not assert blind exception: `Exception`
  "B905",  # `zip()` without an explicit `strict=` parameter
  "S101",  # Use of `assert` detected
  "W605",  # [*] Invalid escape sequence: `\s`
  "E402",  # Module level import not at top of file
  "S607",  # Starting a process with a partial executable path
  "B028",  # No explicit `stacklevel` keyword argument found
  "S202",  # Uses of `tarfile.extractall()`
  "DTZ005",  # `datetime.datetime.now()` called without a `tz` argument
  "DTZ007",  # Naive datetime constructed using `datetime.datetime.strptime()` without %z
  "S608",  # Possible SQL injection vector through string-based query construction
  "S108",  # Probable insecure usage of temporary file or directory: "/tmp"
  "S105",
  "S311",  # We are not using random for cryptographic purposes
  "S603",  # subprocess used only for trusted commands (git, pandoc, test runners)
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.extend-per-file-ignores]
"*/test_*.py" = ["S101"]
"qsirecon/utils/debug.py" = ["A002", "T100"]
"docs/conf.py" = ["A001"]
"docs/sphinxext/github_link.py" = ["BLE001"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = '-m "not integration"'
markers = [
    "integration: integration tests to skip by default",
    "mrtrix_singleshell_ss3t_act: test 1",
    "mrtrix_singleshell_ss3t_noact: test 2",
    "amico_noddi: test 5",
    "dipy_mapmri: test 7",
    "dipy_dki: test 8",
    "scalar_mapper: test 17",
    "pyafq_recon_external_trk: test 18",
    "pyafq_recon_full: test 19",
    "mrtrix3_recon: test 20",
    "tortoise_recon: test 21",
    "autotrack: test 22",
    "mrtrix_multishell_msmt_hsvs: test 23",
    "ss3t_fod_autotrack: test 24",
    "multises_post1_qsiprep: test 25",
    "multises_pre1_qsiprep: test 26",
    "interfaces: test 27",
    "mrtrix3_recon_with_response_functions: test 28",
]
env = [
    "RUNNING_PYTEST = 1",
]

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
    "qsirecon/_version.py"
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    'raise NotImplementedError',
    'warnings\.warn',
]
