[build-system]
requires = ["hatchling", "hatch-vcs", "nipreps-versions", "cython", "numpy", "setuptools_scm<10"]
build-backend = "hatchling.build"

[project]
name = "qsirecon"
description = "qsirecon builds workflows for reconstructing q-space images"
readme = "long_description.rst"
authors = [{name = "The PennLINC developers"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "numpy <= 1.26.3",
    'importlib_resources; python_version < "3.11"',
    "dipy>=1.10.0,<1.11.0",
    "dmri-amico == 2.0.3",
    "filelock == 3.20.3",
    "fury == 0.12.0",
    "indexed_gzip <= 1.8.7",
    "Ingress2QSIRecon ~= 0.3",
    "jinja2 < 3.1",
    "networkx ~= 2.8.8",
    "nibabel <= 6.0.0",
    "nilearn == 0.10.1",
    "nipype == 1.9.1",
    "nireports >= 24.0.3",
    "niworkflows >= 1.13,< 1.14",
    "packaging",  # for version string parsing
    "pandas < 2.0.0",
    "psutil <= 5.9.8",
    "pyAFQ == 2.0",
    "pybids == 0.17.2",
    "pyyaml == 6.0.3",
    "scikit-image",
    "scikit-learn <= 1.4.0",
    "seaborn == 0.13.2",
    "sentry_sdk == 1.40.6",
    "SimpleITK == 2.5.3",
    "svgutils <= 0.3.4",
    "transforms3d ==0.4.1",
    "vtk == 9.3.1",
    "xvfbwrapper == 0.2.9",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pennlinc/qsirecon"
Documentation = "https://www.qsirecon.readthedocs.io"
Paper = "https://doi.org/10.1038/s41592-022-01458-7"
"Docker Images" = "https://hub.docker.com/r/pennlinc/qsirecon/tags/"

[project.optional-dependencies]
doc = [
    "doctest-ignore-unicode",
    "lxml_html_clean",
    "nbsphinx",
    "pydot >= 1.2.3",
    "pydotplus",
    "recommonmark",
    "sphinx >= 4.2.0",
    "sphinx-argparse",
    "sphinx-markdown-tables",
    "sphinx_rtd_theme",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-bibtex",
    "sphinx_design",
]
dev = [
    "ruff ~= 0.15.0",
    "pre-commit",
    "tox",
]
tests = [
    "coverage",
    "pytest",
    "pytest-cov",
    "pytest-env",
]
maint = [
    "fuzzywuzzy",
    "python-Levenshtein",
]

# Aliases
all = ["qsirecon[dev,doc,maint,tests]"]

[project.scripts]
qsirecon = "qsirecon.cli.run:main"
mif2fib = "qsirecon.cli.convertODFs:mif_to_fib"
fib2mif = "qsirecon.cli.convertODFs:fib_to_mif"
qsirecon_group_report = "qsirecon.cli.group_report:aggregate_reports"
recon_plot = "qsirecon.cli.recon_plot:recon_plot"

#
# Hatch configurations
#

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]  # No longer needed in sdist

[tool.hatch.build.targets.wheel]
packages = ["qsirecon"]
exclude = [
    "qsirecon/tests/data",  # Large test data directory
]

##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
source = "vcs"
# raw-options = { version_scheme = "nipreps-calver" }

[tool.hatch.build.hooks.vcs]
version-file = "qsirecon/_version.py"

#
# Pixi configuration
#

[tool.pixi.workspace]
channels = ["https://fsl.fmrib.ox.ac.uk/fsldownloads/fslconda/public", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.activation.env]
FSLDIR = "$CONDA_PREFIX"
FSLOUTPUTTYPE = "NIFTI_GZ"

[tool.pixi.environments]
default = { features = ["editable"], solve-group = "default" }
test = { features = ["editable", "tests"], solve-group = "default" }
qsirecon = { features = ["production", "container"], solve-group = "production" }

[tool.pixi.feature.editable.pypi-dependencies]
qsirecon = { path = ".", editable = true }

[tool.pixi.feature.production.pypi-dependencies]
qsirecon = { path = ".", editable = false }

[tool.pixi.tasks]

[tool.pixi.pypi-options.dependency-overrides]
numpy = ">=1.26,<1.27"

[tool.pixi.dependencies]
python = "3.10.*"
nodejs = "20.*"
mkl = "*"
mkl-service = "*"
numpy = "1.26.*"
scipy = "1.11.*"
matplotlib = "3.8.*"
pandas = "1.5.*"
h5py = "3.10.*"
graphviz = "*"
pandoc = "*"
ants = "2.6.*"
connectome-workbench-cli = { version = "2.0.*", build = "*qt6*" }
fsl-base = "*"
fsl-avwutils = "*"
fsl-bet2 = "*"
fsl-flirt = "*"
fsl-fugue = "*"
fsl-mcflirt = "*"
fsl-miscmaths = "*"
fsl-topup = "*"
fsl-warpfns = "*"
setuptools = "<82.0.0"

[tool.pixi.feature.container.dependencies]
git = "*"
git-annex = { version = "*", build = "alldep*" }

#
# Developer tool configurations
#

# Disable black
[tool.black]
exclude = ".*"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "YTT",
  "S",
  "BLE",
  "B",
  "A",
  # "CPY",
  "C4",
  "DTZ",
  "T10",
  # "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "LOG",
  "PIE",
  "PYI",
  "PT",
  "Q",
  # "SIM",
  # "TID",
  "FLY",
  # "PD",
  "PERF",
  "W",
  "PGH",
  "PLC",
  "PLE",
  "PLW",
  "FURB",
  "RUF",
]
ignore = [
  # --- Shared with xcp_d ---
  "S105",  # Possible hardcoded password
  "S311",  # We are not using random for cryptographic purposes
  "S603",  # subprocess used only for trusted commands
  "PIE790",  # Unnecessary `...` literal
  "PERF203",  # `try`-`except` within a loop
  "PLC0415",  # `import` should be at the top of the file
  "PLW2901",  # Outer variable overwritten by inner assignment
  "RUF005",  # Consider unpacking instead of concatenation
  "RUF012",  # Mutable class variables should use `ClassVar`
  # --- qsirecon-specific (to be addressed incrementally) ---
  "B006",  # Mutable data structures for argument defaults (~30 workflow functions)
  "B017",  # Do not assert blind exception: `Exception`
  "B028",  # No explicit `stacklevel` keyword argument found
  "B904",  # Within an `except` clause, raise exceptions with `from`
  "B905",  # `zip()` without an explicit `strict=` parameter
  "BLE001",  # Do not catch blind exceptions
  "S101",  # Use of `assert` detected
  "S108",  # Probable insecure usage of temporary file or directory
  "S110",  # `try`-`except`-`pass` detected
  "S113",  # Probable use of `requests` call without timeout
  "S202",  # Uses of `tarfile.extractall()`
  "S602",  # `subprocess` call with `shell=True`
  "S607",  # Starting a process with a partial executable path
  "S608",  # Possible SQL injection vector through string-based query construction
  "A004",  # Import is shadowing a Python builtin
  "DTZ005",  # `datetime.datetime.now()` called without a `tz` argument
  "DTZ007",  # Naive datetime constructed using `strptime()` without %z
  "E402",  # Module level import not at top of file
  "W605",  # Invalid escape sequence
  "PT009",  # Use a regular `assert` instead of unittest-style
  "PT027",  # Use `pytest.raises` instead of unittest-style
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.extend-per-file-ignores]
"*/test_*.py" = ["S101"]
"qsirecon/utils/debug.py" = ["A002", "T100"]
"docs/conf.py" = ["A001"]
"docs/sphinxext/github_link.py" = ["BLE001"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = '-m "not integration"'
markers = [
    "integration: integration tests to skip by default",
    "mrtrix_singleshell_ss3t_act: test 1",
    "mrtrix_singleshell_ss3t_noact: test 2",
    "amico_noddi: test 5",
    "dipy_mapmri: test 7",
    "dipy_dki: test 8",
    "scalar_mapper: test 17",
    "pyafq_recon_external_trk: test 18",
    "pyafq_recon_full: test 19",
    "mrtrix3_recon: test 20",
    "tortoise_recon: test 21",
    "autotrack: test 22",
    "mrtrix_multishell_msmt_hsvs: test 23",
    "ss3t_fod_autotrack: test 24",
    "multises_post1_qsiprep: test 25",
    "multises_pre1_qsiprep: test 26",
    "interfaces: test 27",
    "mrtrix3_recon_with_response_functions: test 28",
]
env = [
    "RUNNING_PYTEST = 1",
]

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
    "qsirecon/_version.py"
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    'raise NotImplementedError',
    'warnings\.warn',
]

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.html,dataset_description.json,*.gii,pixi.lock'
# te - TE (echo time)
# Weill - name
# reson - Reson. abbreviation in citation
# DNE - acronym for does not exist
# fo - acronym for file object
# fixel/fixels - real neuroimaging term
# pres - variable name
# Gage, Joo, Sepulcre - author names
# numer - abbreviation for numerator
ignore-words-list = 'te,weill,reson,DNE,fo,fixel,fixels,pres,Gage,Joo,Sepulcre,numer'
