[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "qsirecon_container"
description = "qsirecon builds workflows for preprocessing and reconstructing q-space images"
readme = "../long_description.rst"
authors = [{name = "The PennLINC developers"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    'importlib_resources; python_version < "3.11"',
]
version = "0.20.1"

[project.urls]
Homepage = "https://github.com/pennlinc/qsirecon"
Documentation = "https://www.qsirecon.readthedocs.io"
Paper = "https://doi.org/10.1038/s41592-022-01458-7"
"Docker Images" = "https://hub.docker.com/r/pennlinc/qsirecon/tags/"

[project.scripts]
qsirecon-docker = "qsirecon_container.qsirecon_docker:main"
qsirecon-singularity = "qsirecon_container.qsirecon_singularity:main"

#
# Hatch configurations
#

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["qsirecon_container"]
exclude = [ ]

##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
source = "vcs"
